--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -303,6 +303,9 @@
     <string name="lock_clock_font_burnstown">Burnstown</string>
     <string name="lock_clock_font_dumbledor">Dumbledor</string>
     <string name="lock_clock_font_phantombold">PhantomBold</string>
+    <string name="lock_clock_font_sourcesanspro">Source Sans Pro</string>
+    <string name="lock_clock_font_circularstd">CircularStd</string>
+    <string name="lock_clock_font_slateforoneplus">Slate for OnePlus</string>
 
     <!-- Lock Date Fonts -->
     <string name="lock_date_font_title">Date font options</string>
