DUTweaks: Make QS blur togglable [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -993,4 +993,8 @@
     <!-- Lock icon -->
     <string name="hide_lockicon_title">Hide lock icon</string>
     <string name="hide_lockicon_summary">Hide the lock icon on lockscreen</string>
+
+    <!-- QS blur -->
+    <string name="blur_quicksettings">Blur behind quick settings (beta)</string>
+    <string name="blur_quicksettings_subtitle">blurs darkened background behind quick settings</string>
 </resources>
