DUTweaks: Add sammy accent clock and a variant [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -961,7 +961,9 @@
     <string name="lockscreen_clock_default_bold">Default (bold)</string>
     <string name="lockscreen_clock_sammy">Sammy</string>
     <string name="lockscreen_clock_sammy_bold">Sammy (bold)</string>
-    <string name="lockscreen_clock_text">Typeface</string>
+    <string name="lockscreen_clock_sammy_accent_hour">Sammy Accent(hours)</string>
+    <string name="lockscreen_clock_sammy_accent_mins">Sammy Accent(minutes)</string>
+    <string name="lockscreen_clock_text">Typography</string>
 
     <!-- Lockscreen Date styles -->
     <string name="lockscreen_date_selection_title">Date style</string>
