--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -871,6 +871,7 @@
     <string name="lockscreen_clock_sammy_accent_mins">Sammy Accent(minutes)</string>
     <string name="lockscreen_clock_text">Text clock</string>
     <string name="lockscreen_clock_analog_style">Analog Q Style</string>
+    <string name="lockscreen_clock_analog_num_style">Analog clock(number)</string>
 
     <!-- Lockscreen Date styles -->
     <string name="lockscreen_date_selection_title">Date style</string>
