DUTweaks: QS Header data usage info [2/2]
Signed-off-by: 00day0 <therandomuser11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1098,4 +1098,8 @@
     <string name="display_cutout_force_fullscreen_summary">Force apps to ignore notch space</string>
     <string name="display_cutout_force_fullscreen_restart_app">Please restart the application to apply the changes.</string>
     <string name="cutout_force_fullscreen_no_apps">No apps</string>
+
+    <!-- QS data usage -->
+    <string name="qs_datausage_title">Show data usage in qs header</string>
+    <string name="qs_datausage_subtitle">Shows data usage in quick settings header of sim used for data</string>
 </resources>
