--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -997,4 +997,6 @@
     <!-- QS blur -->
     <string name="blur_quicksettings">Blur behind quick settings (beta)</string>
     <string name="blur_quicksettings_subtitle">blurs darkened background behind quick settings</string>
+    <string name="qs_blur_alpha_title">Blur alpha</string>
+    <string name="qs_blur_alpha_summary">Sets the blur transparency</string>
 </resources>
