--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -870,6 +870,10 @@
     <string name="fod_pressed_state_icon_white">Icon (White)</string>
     <string name="fod_pressed_state_solid_color">Solid color (usually Green)</string>
 
+    <!-- FOD animations -->
+    <string name="fod_recog_animation">FOD recognizing animation</string>
+    <string name="fod_recog_animation_summary">Shows an animation while reading your finger</string>
+
     <!-- Custom actions -->
     <string name="action_nothing">No action</string>
     <string name="action_menu">Menu</string>
