--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -872,6 +872,7 @@
     <string name="lockscreen_clock_text">Text clock</string>
     <string name="lockscreen_clock_analog_style">Analog Q Style</string>
     <string name="lockscreen_clock_analog_num_style">Analog clock(number)</string>
+    <string name="lockscreen_clock_analog_du_style">Analog DU clock</string>
 
     <!-- Lockscreen Date styles -->
     <string name="lockscreen_date_selection_title">Date style</string>
