--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -970,4 +970,7 @@
     <string name="text_clock_alignment">Text Clock Alignment</string>
     <string name="text_clock_left">Left</string>
     <string name="text_clock_center">Center</string>
+
+    <string name="brightness_slider_qs_unexpanded">MIUI brightness slider</string>
+    <string name="brightness_slider_qs_unexpanded_summary">Shows brightness slider below qs panel</string>
 </resources>
