optional miui-like brightness slider [3/3]
Signed-off-by: 00day0 <therandomuser11@gmail.com>
Change-Id: Id25a1588234d7cd51421676023e89a30f3a67915

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1283,4 +1283,7 @@
     <string name="ui_radius_rectangle">Rectangle</string>
     <string name="ui_radius_medium">Medium</string>
     <string name="ui_radius_large">Large</string>
+
+    <string name="brightness_slider_qs_unexpanded">MIUI brightness slider</string>
+    <string name="brightness_slider_qs_unexpanded_summary">Shows brightness slider below qs panel</string>
 </resources>
