--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -701,6 +701,8 @@
     <string name="pulse_ambient_auto_color_title">Auto color</string>
     <string name="pulse_ambient_auto_color_summary">Sets edge light color to the primary color of wallpaper</string>
     <string name="pulse_ambient_light_duration_title">Duration</string>
+    <string name="pulse_ambient_light_repeat_count_title">Edge Light Repeat count</string>
+    <string name="pulse_ambient_light_repeat_count_summary">Set max repeat count. 0 for infinite</string>
 
     <!-- Ambient visualizer -->
     <string name="ambient_visualizer_title">Ambient Music visualizer</string>
