--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -889,6 +889,7 @@
     <string name="fod_recog_animation_pureview_future">Future</string>
     <string name="fod_recog_animation_pureview_halo_ring">Halo ring</string>
     <string name="fod_recog_animation_pureview_molecular">Molecular</string>
+    <string name="fod_recog_animation_bluefirework">Blue Fireworks</string>
 
     <!-- Custom actions -->
     <string name="action_nothing">No action</string>
