DUTweaks: Add Network Traffic Layout [2/2]
Signed-off-by: Genkzsz11 <Genkzsz11@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -114,6 +114,9 @@
     <string name="network_traffic_arrow">Show arrows</string>
     <string name="network_traffic_arrow_summary">Show the network traffic indicator arrows</string>
     <string name="nettraf_font_size">Single Net Font size</string>
+    <string name="network_traffic_layout">Activity layout</string>
+    <string name="network_traffic_layout_h">Horizontal</string>
+    <string name="network_traffic_layout_v">Vertical</string>
 
     <!-- Network Traffic Location -->
     <string name="network_traffic_location_title">Traffic indicator placement</string>
