--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -865,6 +865,7 @@
     <string name="action_qs_panel">QS panel</string>
     <string name="action_app_action">Application</string>
     <string name="action_ringer_modes">Ringer modes</string>
+    <string name="kill_app">Kill foreground app</string>
 
     <!-- Navigation -->
     <string name="navigation_bar_title">On-screen navigation bar</string>
