--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -882,6 +882,8 @@
     <string name="action_app_action">Application</string>
     <string name="action_ringer_modes">Ringer modes</string>
     <string name="kill_app">Kill foreground app</string>
+    <string name="skip_song">Skip song</string>
+    <string name="prev_song">Previous song</string>
 
     <!-- Navigation -->
     <string name="navigation_bar_title">On-screen navigation bar</string>
