DUTweaks: Add toggle for show battery in QS [2/2]

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -402,6 +402,8 @@
     <string name="battery_percentage_off">Disabled</string>
     <string name="battery_percentage_on">Enabled</string>
     <string name="battery_percentage_charging">Enabled (While charging)</string>
+    <string name="battery_show_location_title">Battery location</string>
+    <string name="battery_show_location_summary">Toggle battery location for QS header</string>
 
     <!-- Lock screen visualizer -->
     <string name="lockscreen_visualizer_enable">Visualizer</string>
