Nad: Li: Max Lockscreen Notification count [2/2]
Signed-off-by: Varun Date <date.varun123@gmail.com>
Change-Id: I3739ef422d963f17f7740d0235f018865e9775af
Signed-off-by: Varun Date <date.varun123@gmail.com>
Signed-off-by: ghou8s <ghou8s@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1330,4 +1330,11 @@
     <string name="statusbar_dual_row_title">Dual Status Bar</string>
     <string name="statusbar_dual_row_summary">Enable dual row statusbar</string>
 
+    <!-- Custom lockscreen notifications count -->
+    <string name="notif_settings_title">Notifications</string>
+    <string name="lock_screen_custom_notif_title">Custom notifications count</string>
+    <string name="lock_screen_custom_notif_summary">Toggle to enable setting max notifications count on lockscreen</string>
+    <string name="lockscreen_max_notif_config_title">Maximum number of notifications</string>
+    <string name="lockscreen_max_notif_config_summary">Control the maximum number of expanded notifications to show on lockscreen</string>
+
 </resources>
