DUTweaks: Allow to hide navigation bar gesture completely [2/2]
Change-Id: Ic7b1f7e4eb77a26cb1000b377002a14bdf10cca3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1040,11 +1040,12 @@
     <string name="hardware_keys_disable_summary">Use the device hardware keys for navigation</string>
 
     <!-- Gesture navbar handle -->
-    <string name="gesture_navbar_handle_title">Handle bar size</string>
-    <string name="gesture_navbar_handle_hidden">Hidden</string>
-    <string name="gesture_navbar_handle_default">Default</string>
-    <string name="gesture_navbar_handle_middle">Middle</string>
-    <string name="gesture_navbar_handle_large">Large</string>
+    <string name="gesture_navbar_handle_title">Navigation bar display style</string>
+    <string name="gesture_navbar_hidden">Hidden navigation bar</string>
+    <string name="gesture_navbar_handle_hidden">Hidden pill</string>
+    <string name="gesture_navbar_handle_default">Default pill</string>
+    <string name="gesture_navbar_handle_middle">Middle pill</string>
+    <string name="gesture_navbar_handle_large">Large pill</string>
 
     <!-- Smart pulldown-->
     <string name="smart_pulldown_title">Smart pulldown</string>
