Welcome The Raven
Also simplify strings

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,9 +16,9 @@
 
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
-    <!-- Dirty Tweaks -->
-    <string name="dirtytweaks_title">Dirty Tweaks</string>
-    <string name="dirtytweaks_summary">Enhance your experience</string>
+    <!-- Raven's Lair -->
+    <string name="dirtytweaks_title">Raven\'s Lair</string>
+    <string name="dirtytweaks_summary">Unleash the Raven</string>
 
     <!-- The Team -->
     <string name="dialog_team_title">The team</string>
@@ -38,15 +38,15 @@
     <string name="corvus_parts_title">Corvus Parts</string>
     <string name="corvus_parts_summary">Corvus device specific parts</string>
     <string name="miscellaneous_title">Miscellaneous</string>
-    <string name="miscellaneous_summary">Miscellaneous tweaks</string>
+    <string name="miscellaneous_summary">Miscellaneous tricks</string>
     <string name="powermenu_title">Power menu</string>
     <string name="powermenu_summary">Configure the power menu</string>
     <string name="notifications_title">Notifications</string>
-    <string name="notifications_summary">Tweaks specific to system notifications</string>
+    <string name="notifications_summary">Tricks specific to system notifications</string>
 
     <!-- Lockscreen -->
     <string name="fingerprint_prefs_title">Fingerprint prefs</string>
-    <string name="fingerprint_prefs_summary">Tweaks specific to the fingerprint scanner</string>
+    <string name="fingerprint_prefs_summary">Tricks specific to the fingerprint scanner</string>
     <string name="lockscreen_items_title">Lockscreen items</string>
     <string name="lockscreen_items_summary">Customize the lockscreen</string>
     <string name="lockscreen_style_title">Lockscreen Style</string>
@@ -67,7 +67,7 @@
     <string name="traffic_title">Traffic indicators</string>
     <string name="traffic_summary">Enable and configure the traffic indicators</string>
     <string name="ticker_title">Ticker</string>
-    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tweaks</string>
+    <string name="ticker_summary">Enable the statusbar ticker and configure ticker related tricks</string>
 
     <!-- Navigation -->
     <string name="buttons_title">Buttons</string>
@@ -1072,8 +1072,8 @@
     <string name="pocket_judge_summary">Block screen and button inputs when device is in pocket</string>
 
     <!-- OOS clear all button -->
-    <string name="enable_clear_all_button">Replace clear all text with nice button</string>
-    <string name="enable_clear_all_button_summary">Show clear all notifications button in quick settings instead of default text one</string>
+    <string name="enable_clear_all_button">OOS clear all button</string>
+    <string name="enable_clear_all_button_summary">Show OOS clear all notifications button in quick settings instead of default text one</string>
 
     <!-- Display cutout options -->
     <string name="display_cutout_style_title">Cutout style</string>
